--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
    
     <section id="lisTab" class="lis-tab">
-      <h1>Awesome books</h1>
+      <h1>Awesome Books</h1>
       <div class="books-ph" id="book"></div>
     </section>
     <section id="addTab" class="add-tab">
