--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="form">
         <input class="finput" id="title" type="text" placeholder="Book Title" />
         <input class="finput" id="author" type="text" placeholder="Author" />
-        <button class="adbtn" id="addBtn" type="button" onclick="getInputValues()">Add Book</button>
+        <button class="adbtn" id="addBtn" type="button" onclick="getValues()">Add Book</button>
       </div>
     </section>
     <section id="cTab" class="cont-tab">
