--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         <p class="ntitle">AWESOME BOOKS</p>
         <div class="navLinks">
           <label class="nav-label">
-            <input id="listBook" onclick="goList()" class="navbtn">
+            <input id="listBook" onclick="getList()" class="navbtn">
             </input>
             <span>List |</span>
           </label>
           <label class="nav-label">
-            <input id="listBook" onclick="goAdd()" class="navbtn">
+            <input id="listBook" onclick="getAdd()" class="navbtn">
             </input>
             <span>Add Book |</span>
           </label>
           <label class="nav-label">
-            <input id="listBook" onclick="goContact()" class="navbtn">
+            <input id="listBook" onclick="getContact()" class="navbtn">
             </input>
             <span>Contact</span>
           </label>
